                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.1

  *) [TS-1526] SNI support breaks IP-based lookup

  *) [TS-1513] SPDY plugin crashes on connection close

  *) [TS-1516] use_client_addr breaks parent proxy configuration
     Author: Uri Shachar.

  *) [TS-1518] detect header_rewrite plugin boost dependency

  *) [TS-1003] make Prefetch config file reloadable

  *) [TS-1462] SPDY proxy plugin

  *) [TS-1488] Check the event`s cancel flag before put it into the PriorityEventQueue.
     Author: KuoTai.

  *) [TS-1484] Fix SNI crashes where there is no default certificate

  *) [TS-1473] Fix header_filter plugin for ARM.

  *) [TS-1457] Change chunking output to avoid massive memory use by transforms.

  *) [TS-1469] Manager uses hardcoded FD limit causing restarts
      forever on traffic_server. Reported By: Thomas Jackson

  *) [TS-1466] disable ssl compression by default

  *) [TS-1464] mark ink_assert with the noreturn attribute

  *) [TS-1458] fix LuaJIT include ordering

  *) [TS-1454] crash when ic_hostname is null in cluster mode

  *) [TS-1270] add force local cache control in clustering mode

  *) [TS-1386] thread hang in cluster type=1, which will trigger the
     throttling

  *) [TS-1351] raw disk cache disabled when system start

  *) [TS-1452] gzip build failure with Apple/clang-421.0.57

  *) [TS-1339] Move fragment offset table from First Doc to Alt header so
     that fragment offsets are stored per alternate.

  *) [TS-1416] Do not do cache lookup if cop_test_page is true to stop
     artificial increase of cache misses.

  *) [TS-1364] Rewrite reverse-proxy URL headers in all cases, not just
     a basic Redirect target.

  *) [TS-1440] Lua transaction and session hook support

  *) [TS-1266] RAM cache stats are wrong with CLFUS.

  *) [TS-1437] Make the Lua plugin compile on RedHat based distros.

  *) [TS-1436] Added Yahoo directory layout for installation.
